[tool.poetry]
name = "trifiasco-code-library"
version = "0.1.0"
description = ""
authors = ["Arnab Roy <trifiasco@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pydantic = "^2.4"
coverage = {extras = ["toml"], version = "^7.3.2"}
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
flake8 = "^6.1.0"
black = "^23.11.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
